force-app/main/default/objects/Temporal_Eventos_Detalles_Fechas__c/Temporal_Eventos_Detalles_Fechas__c.object-meta.xml
<CustomObject>
    <label>Temporal Evento Detalle Fecha</label>
    <nameField>
        <label>Temporal Evento Detalle Fecha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Eventos Detalles Fechas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>