force-app/main/default/objects/Temporal_Eventos_Detalles_Fechas__c/fields/Benefit_Session__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Session</label>
    <referenceTo>BenefitSession</referenceTo>
    <relationshipLabel>Temporal Eventos Detalles Fechas</relationshipLabel>
    <relationshipName>Temporal_Eventos_Detalles_Fechas</relationshipName>
    <type>Lookup</type>
</CustomField>