force-app/main/default/objects/Temporal_Eventos_Detalles_Fechas__c/fields/DA_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>DA_ALUMNO__c</fullName>
    <label>DA_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>