force-app/main/default/objects/Temporal_Eventos_Detalles_Fechas__c/fields/f0__c.field-meta.xml
<CustomField>
    <fullName>f0__c</fullName>
    <label>f0_</label>
    <length>255</length>
    <type>Text</type>
</CustomField>