force-app/main/default/objects/Temporal_Eventos_Detalles_Fechas__c/fields/Tipo_Error__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Error__c</fullName>
    <label>Tipo de Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_Error</valueSetName>
    </valueSet>
</CustomField>