force-app/main/default/objects/Temporal_Eventos_Detalles_Fechas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>DA_NUMACT__c</columns>
    <columns>DA_NUMTRP__c</columns>
    <columns>DA_TIPALU__c</columns>
    <columns>DA_ALUMNO__c</columns>
    <columns>p_salesforce_id__c</columns>
    <columns>DA_FECHAS__c</columns>
    <columns>f0__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>